# GithubStats

./: README.md  main.py  pyproject.toml
github/: __main__.py
src/github/: __main__.py  github_client.py  github_formatter.py  github_parser.py  github_queries.py  queries.py
