[tool.poetry]
name = "githubstats"
version = "0.1.0"
description = ""
authors = ["BugliL <bugli.lorenzo@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphene = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
