[tool.poetry]
name = "githubstats"
version = "0.1.0"
description = ""
authors = ["BugliL <bugli.lorenzo@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphene = "^3.3"
urllib3 = "^2.1.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
